@@ -9,6 +9,7 @@
     - fpsync: fix bug where a job could remain resumable forever under certain
       conditions.
     - fpsync: fix detection of fpart exiting with errors
+    - fpart: fix detection of unknown option
 2020/01/10, 1.2.0 ('Joking') :
     - fpsync: ability to set an unlimited number of files or an unlimited size
       per sync job (fixes GH issue #9)
